# Parsegument

./: .gitignore  README.md  pyproject.toml
examples/: help_messages.py  quick_example.py  quickstart.py
src/: __init__.py
src/parsegument/: Arguments.py  BaseGroup.py  Command.py  CommandGroup.py  Node.py  Parameters.py  Parsegumenter.py  __init__.py  error.py
src/parsegument/decorators/: parameters.py
src/parsegument/types/: ArgDict.py
src/parsegument/utils/: convert_params.py  parser.py
tests/: test.py  test2.py  testcases.py
